--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,8 @@
     <div class="post">
       <h3 class="user"><%= x.username.toUpperCase()%></h3>
       <p class="content"><%= x.content.slice(0,20)%></p>
-      <a href="/posts/<%=x.id%>">show full post</a>
+      <a href="/posts/<%=x.id%>">show full post</a> <br />
+      <a href="/posts/<%=x.id%>/edit">Edit Post</a>
     </div>
 
     <% } %>
