--- a/views/show.ejs
+++ b/views/show.ejs
@@ -14,5 +14,6 @@
       <p>content: <%= idPost.content %></p>
     </div>
     <a href="/posts"><button class="btn">Home</button></a>
+    <a href="/posts/<%= idPost.id %>/edit">edit </a>
   </body>
 </html>
